--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -74,140 +73,54 @@
             background-color: #2c3e50;
             color: white;
             position: relative;
-            bottom: 0;
-            width: 100%;
-        }
-        @media (max-width: 768px) {
-            .container {
-                margin: 10px;
-                padding: 15px;
-            }
-            nav a {
-                display: block;
-                margin: 10px 0;
-            }
+            bottom: 10px; /* Абсолютное позиционирование */
         }
     </style>
 </head>
 <body>
-    <!-- Шапка сайта -->
-    <header>
+    <header id="header">
         <h1>BOY'S – Семейный Барбершоп</h1>
+        <nav>
+            <a href="#services">Услуги</a>
+            <a href="#about">О нас</a>
+            <a href="#booking">Бронирование</a>
+            <a href="#contacts">Контакты</a>
+        </nav>
     </header>
 
-    <!-- Навигация -->
-    <nav>
-        <a href="#home">Главная</a>
-        <a href="#about">О нас</a>
-        <a href="#services">Услуги</a>
-        <a href="#booking">Запись</a>
-        <a href="#contacts">Контакты</a>
-    </nav>
+    <div class="container">
+        <h2 id="services">Услуги</h2>
+        <p>В нашем семейном барбершопе мы предлагаем широкий спектр услуг для мужчин и детей. Наши мастера помогут сохранить вашу красоту и уверенность.</p>
 
-    <!-- Главная страница -->
-    <div id="home" class="container">
-        <h2>Добро пожаловать в BOY'S!</h2>
-        <p>Мы – семейный барбершоп, где каждый найдет свою идеальную стрижку! Уютная атмосфера, профессиональные мастера и забота о вас и ваших близких. Стрижки для детей и взрослых – приходите всей семьей!</p>
-    </div>
+        <h2 id="about">О нас</h2>
+        <p>Добро пожаловать в BOY'S – семейный барбершоп! Мы предлагаем профессиональные услуги по стрижке волос для мужчин и детей. Наши мастера используют только качественные средства и инструменты.</p>
 
-    <!-- О нас -->
-    <div id="about" class="container about">
-        <h2>История BOY'S</h2>
-        <p>BOY'S появился из мечты создать место, где стрижка – это не просто услуга, а настоящее удовольствие. С 2018 года мы радуем наших клиентов качеством и теплом. Наша философия – стиль и комфорт для всей семьи!</p>
-        <!-- Здесь можно добавить фото/видео -->
-    </div>
+        <h2 id="booking">Бронирование</h2>
+        <form action="#" method="post">
+            <label for="date">Дата:</label>
+            <input type="text" id="date" name="date">
 
-    <!-- Услуги -->
-    <div id="services" class="container services">
-        <h2>Наши услуги</h2>
-        <ul>
-            <li>Стрижка для детей – от 500 руб.</li>
-            <li>Мужская стрижка – от 800 руб.</li>
-            <li>Оформление бороды – от 600 руб.</li>
-            <li>Семейный пакет (2+1) – от 1500 руб.</li>
-        </ul>
-        <!-- Здесь можно добавить фото/видео -->
-    </div>
-
-    <!-- Запись на стрижку -->
-    <div id="booking" class="container booking">
-        <h2>Запишитесь на стрижку</h2>
-        <form id="booking-form">
-            <label for="date">Выберите дату:</label>
-            <input type="date" id="date" name="date" required>
-<label for="time">Выберите время:</label>
-            <select id="time" name="time" required>
-                <option value="09:00">09:00</option>
+            <label for="time">Время:</label>
+            <select id="time" name="time">
                 <option value="10:00">10:00</option>
                 <option value="11:00">11:00</option>
                 <option value="12:00">12:00</option>
-                <option value="13:00">13:00</option>
-                <option value="14:00">14:00</option>
-                <option value="15:00">15:00</option>
-                <option value="16:00">16:00</option>
-                <option value="17:00">17:00</option>
             </select>
 
-            <label for="phone">Ваш телефон:</label>
-            <input type="tel" id="phone" name="phone" pattern="[0-9]{10,12}" placeholder="79991234567" required>
+            <label for="name">Имя:</label>
+            <input type="text" id="name" name="name">
 
-            <button type="submit">Записаться</button>
+            <label for="phone">Телефон:</label>
+            <input type="tel" id="phone" name="phone">
+
+            <button type="submit">Забронировать</button>
         </form>
+
+        <h2 id="contacts">Контакты</h2>
+        <p>Адрес: Ул. Свободы, д. 10<br>
+           Телефон: +7 (987) 654-32-10</p>
     </div>
 
-    <!-- Контакты -->
-    <div id="contacts" class="container contacts">
-        <h2>Свяжитесь с нами</h2>
-        <p>Адрес: г. Москва, ул. Примерная, д. 10</p>
-        <p>Телефон: +7 (999) 123-45-67</p>
-        <form id="contact-form">
-            <label for="name">Ваше имя:</label>
-            <input type="text" id="name" name="name" required>
-            <label for="email">Email или телефон:</label>
-            <input type="text" id="email" name="email" required>
-            <button type="submit">Отправить</button>
-        </form>
-    </div>
-
-    <!-- Политика конфиденциальности -->
-    <div class="container">
-        <h2>Политика конфиденциальности</h2>
-        <p>Мы уважаем вашу конфиденциальность. Все данные, которые вы предоставляете, используются исключительно для обработки ваших записей и связи с вами. Мы не передаем информацию третьим лицам.</p>
-    </div>
-
-    <!-- Подвал -->
-    <footer>
-        <p>&copy; 2025 BOY'S – Семейный Барбершоп. Все права защищены.</p>
-    </footer>
-
-    <!-- JavaScript для обработки формы -->
-    <script>
-        document.getElementById('booking-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const formData = new FormData(this);
-            fetch('http://админский-компьютер/bookings', { // Замените на реальный URL бэкенда
-                method: 'POST',
-                body: formData
-            })
-            .then(response => {
-                if (response.ok) {
-                    alert('Вы успешно записались!');
-                    this.reset();
-                } else {
-                    alert('Ошибка при записи. Попробуйте снова.');
-                }
-            })
-            .catch(error => {
-                console.error('Ошибка:', error);
-                alert('Произошла ошибка. Проверьте соединение.');
-            });
-        });
-
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            alert('Сообщение отправлено! Мы скоро свяжемся с вами.');
-            this.reset();
-        });
-    </script>
+    <footer>&copy; 2023 BOY'S – Семейный Барбершоп</footer>
 </body>
 </html>
